<resources>
    <string name="app_name">AITLastChances</string>
    <string name="cannot_be_empty">The email can not be empty</string>
    <string name="pswd_cannot_be_empty">The password can not be empty</string>
    <string name="fnam_cannot_be_empty">The first name can not be empty</string>
    <string name="lname_cannot_be_empty">The last name can not be empty</string>
    <string name="wait_for_it">Wait for it...</string>
    <string name="not_registered">Oops! This name is not registered with AIT Last Chances</string>
    <string name="new_match_msg">You have a new match!</string>
    <string name="null_user">Current user is null</string>
    <string name="people_want_to_connect">people who want to connect with you.</string>
    <string name="new_match">You have a new match!</string>
    <string name="matches">matches!</string>
    <string name="you_have">You have</string>
    <string name="connections">connections.</string>
    <string name="you_have_sent">You have sent</string>
    <string name="you_have_new_match">You have a new match!</string>
    <string name="already_connected">Oops, you already connected with this person!</string>
    <string name="connection_sent">Your connection was sent!</string>
    <string name="error">Error:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="save">save</string>
    <string name="help_1">Last Chances is here to help you connect with other AIT students while you still can!</string>
    <string name="help_2">See the number of matches and connections you\'ve made, and upload a profile picture!</string>
    <string name="help_3">Enter the name of the AIT student you would like to connect with. They will be added to your connections list.</string>
    <string name="help_4">If one of your connections has added you as well, they will be on your matches list.</string>
    <string name="help_5">This applicaiton was made by Madison Minsk and Emma Kennelly. Please connect them to set up a time to discuss any concerns or recommendations you may have. They prefer all meetings to take place at Starbucks.</string>
    <string name="first_name_login">First name</string>
    <string name="last_name_login">Last name</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="aitlastchances">aitlastchances</string>
    <string name="name_profile">Name</string>
    <string name="upload">Upload</string>
    <string name="matches_profile">Matches</string>
    <string name="sent_connections">Sent connections</string>
    <string name="connected_with_you">Connected with You</string>
    <string name="connections_app_bar">Connections</string>
    <string name="matches_app_bar">Matches</string>
    <string name="press_me">Press me</string>
    <string name="button">Button</string>
    <string name="log_out">Log Out</string>
    <string name="help">Help</string>
    <string name="matches_nav">Matches</string>
    <string name="connections_nav">Connections</string>
    <string name="hi">Hi,</string>
    <string name="exclamation">!</string>
</resources>
